name:                apiary-persistent
version:             1.1.0
synopsis:            persistent support for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/persistent.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           stable
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.Database.Persist
  build-depends:       base               >=4.6  && <4.8
                     , persistent         >=2.1  && <2.2

                     , apiary             >=1.1  && <1.2
                     , apiary-logger      >=1.1  && <1.2

                     , resourcet          >=1.1  && <1.2
                     , resource-pool      >=0.2  && <0.3

                     , monad-logger       >=0.3  && <0.4
                     , transformers       >=0.2  && <0.5
                     , transformers-base  >=0.4  && <0.5
                     , monad-control      >=0.3  && <0.4
                     , persistent-sqlite
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
