name:                apiary-purescript
version:             0.16.0
synopsis:            purescript compiler for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/pureScript.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.PureScript
  other-modules:       Web.Apiary.PureScript.Internal
  build-depends:       base                 >=4.6  && <4.8
                     , template-haskell
                     , apiary               >=0.16 && <0.17
                     , purescript           >=0.5  && <0.6

                     , filepath             >=1.3  && <1.4
                     , utf8-string          >=0.3  && <0.4
                     , text                 >=1.1  && <1.2
                     , bytestring           >=0.10 && <0.11
                     , unordered-containers >=0.2  && <0.3
                     , parsec               >=3.1  && <3.2
                     , Glob                 >=0.7  && <0.8
                     , data-default-class   >=0.0  && <0.1

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
