name:                apiary-websockets
version:             0.4.3.1
x-revision:          1
synopsis:            websockets supper for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/websockets.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.WebSockets
  other-modules:       
  build-depends:       base               >=4.5   && <4.8
                     , apiary             >=0.4.2 && <0.5
                     , wai-websockets     >=2.1   && <2.2
                     , websockets         >=0.8   && <0.9

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
