name:                apiary-websockets
version:             0.11.5
synopsis:            websockets support for apiary web framework.
description:
  example: <https://github.com/philopon/apiary/blob/master/examples/websockets.hs>
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Apiary.WebSockets
  other-modules:       
  build-depends:       base               >=4.6   && <4.8
                     , apiary             >=0.8   && <0.16
                     , wai-websockets     >=2.1   && <3.1
                     , websockets         >=0.8   && <0.9

  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
