name:                bench
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  bench.sh
                   , all.sh
                   , average.awk
                   , stdev.awk
cabal-version:       >=1.10

executable apiary
  main-is:             apiary.hs
  build-depends:       base >=4.7 && <4.8
                     , apiary >=0.14
                     , warp
                     , text
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable scotty
  main-is:             scotty.hs
  build-depends:       base >=4.7 && <4.8
                     , scotty >=0.8
                     , text
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable Spock
  main-is:             Spock.hs
  build-depends:       base >=4.7 && <4.8
                     , Spock >=0.6.1
                     , text
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
