name:                bench
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  bench.sh
                   , all.sh
                   , average.awk
                   , stdev.awk
cabal-version:       >=1.10

flag apiary
  default: False
flag scotty
  default: False
flag Spock
  default: False

executable apiary
  main-is:             apiary.hs
  if flag(apiary)
    build-depends:       base >=4.7 && <4.8
                       , apiary >=0.14
                       , warp
                       , text
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable scotty
  main-is:             scotty.hs
  if flag(scotty)
    build-depends:       base >=4.7 && <4.8
                       , scotty >=0.8
                       , text
    buildable: True
  else
    buildable: False

  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable Spock
  main-is:             Spock.hs
  if flag(Spock)
    build-depends:       base >=4.7 && <4.8
                       , Spock >=0.6.3
                       , text
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
