name:                examples
version:             0.18.0
synopsis:            
description:
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

executable main
  main-is:             main.lhs
  build-depends:       base
                     , apiary >=0.18
                     , warp
                     , mtl
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable qiita
  main-is:             qiita.hs
  build-depends:       base
                     , apiary >=0.18
                     , warp
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable persistent
  main-is:             persistent.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-persistent >=0.18
                     , warp
                     , persistent-sqlite
                     , persistent-template
                     , apiary-logger
                     , bytestring
                     , monad-logger
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable auth
  main-is:             auth.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-authenticate >=0.18
                     , apiary-cookie >=0.18
                     , apiary-clientsession >=0.18
                     , warp
                     , bytestring
                     , text
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable websockets
  main-is:             websockets.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-websockets >=0.18
                     , warp
                     , text
                     , template-haskell
                     , directory
                     , filepath
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable eventsource
  main-is:             eventsource.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-eventsource >=0.18
                     , warp
                     , blaze-builder
                     , text
                     , template-haskell
                     , directory
                     , filepath
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010


executable csrf
  main-is:             csrf.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-clientsession >=0.18
                     , warp
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable embed_key
  main-is:             embed_key.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-clientsession >=0.18
                     , warp
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable api
  main-is:             api.hs
  build-depends:       base
                     , apiary >=0.18
                     , warp
                     , aeson
                     , blaze-html
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable pureScript
  main-is:             pureScript.hs
  build-depends:       base
                     , apiary >=0.18
                     , apiary-purescript >=0.18
                     , warp
                     , directory
                     , filepath
                     , template-haskell
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010


source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
