name:                examples
version:             1.0.0
synopsis:            
description:
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/apiary
Bug-reports:         https://github.com/philopon/apiary/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Web
build-type:          Simple
stability:           experimental
-- extra-source-files:  
cabal-version:       >=1.10

executable main
  main-is:             main.lhs
  build-depends:       base
                     , apiary >=1.0
                     , warp
                     , mtl
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable qiita
  main-is:             qiita.hs
  build-depends:       base
                     , apiary >=1.0
                     , warp
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable persistent
  main-is:             persistent.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-persistent >=1.0
                     , warp
                     , persistent-sqlite
                     , persistent-template
                     , apiary-logger
                     , bytestring
                     , monad-logger
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable auth
  main-is:             auth.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-authenticate >=1.0
                     , apiary-cookie >=1.0
                     , apiary-clientsession >=1.0
                     , warp
                     , bytestring
                     , text
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable websockets
  main-is:             websockets.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-websockets >=1.0
                     , warp
                     , text
                     , template-haskell
                     , directory
                     , filepath
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable eventsource
  main-is:             eventsource.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-eventsource >=1.0
                     , warp
                     , blaze-builder
                     , text
                     , template-haskell
                     , directory
                     , filepath
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010


executable csrf
  main-is:             csrf.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-clientsession >=1.0
                     , warp
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable embed_key
  main-is:             embed_key.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-clientsession >=1.0
                     , warp
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable api
  main-is:             api.hs
  build-depends:       base
                     , apiary >=1.0
                     , warp
                     , aeson
                     , blaze-html
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable pureScript
  main-is:             pureScript.hs
  build-depends:       base
                     , apiary >=1.0
                     , apiary-purescript >=1.0
                     , warp
                     , directory
                     , filepath
                     , template-haskell
                     , bytestring
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010

executable background
  main-is:             background.hs
  build-depends:       base
                     , apiary         >=1.0
                     , apiary-mongoDB >=1.0
                     , warp
                     , time
                     , lifted-base
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010


source-repository head
  type:     git
  location: git://github.com/philopon/apiary.git
